--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <p><b>Weight:</b> 4000-7000kg</p>
     <p><b>Height:</b> 3m</p>
     <br>
+    
+    <h2>Kangaroo</h2>
+<p><b>Area:</b> Australia</p>
+<p><b>Weight:</b> 85kg</p>
+<p><b>Height:</b> 1.6m</p>
 
   </body>
 </html>
